feat: Configure Tailwind CSS
Integrates Tailwind CSS for styling by adding necessary dependencies, configuring the `tailwind.config.js` and `postcss.config.js` files, and updating the main CSS and HTML to include Tailwind directives and CDN. This setup enables utility-first CSS for efficient component styling.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,17 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["."],
-  "exclude": ["vite.config.ts"],
+  "include": [
+    "App.tsx",
+    "index.tsx",
+    "constants.ts",
+    "types.ts",
+    "components/**/*.ts",
+    "components/**/*.tsx",
+    "pages/**/*.ts",
+    "pages/**/*.tsx",
+    "services/**/*.ts",
+    "services/**/*.tsx"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
