feat: Remove Tailwind CSS CDN link
The Tailwind CSS CDN link has been removed from index.html. The project now relies on a local build process for styling, which is managed by Vite. This change ensures consistent styling and removes an external dependency.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,6 @@
     "services/**/*.ts",
     "services/**/*.tsx"
   ],
+  "exclude": ["vite.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
